Update Digit classifcation with Tensorflow.ipynb

--- a/Digit classifcation with Tensorflow.ipynb
+++ b/Digit classifcation with Tensorflow.ipynb
@@ -252,7 +252,7 @@
    "metadata": {},
    "source": [
     "# Task 4: Neural Networks\n",
-     'We will use the following neural network:'
+     "We will use the following neural network:\n"
     "![Neural Network with 2 hidden layers](images/1_4.png)\n",
     "\n",
     "This model is much more likely to solve the problem as it can learn more complex function mapping for the inputs and outputs in our dataset."
